added auto meta description

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,18 +11,17 @@
 <link rel="manifest" href="/manifest.json">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="theme-color" content="#ffffff">
-<meta property="og:url" content="http://stemtera.com" />
+<meta property="og:url" content="http://learn.stemtera.com" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="STEMTera Breadboard" />
-<meta property="og:description" content="The world's first Arduino compatible built-in breadboard with Arduino shields, LEGO® bricks and native USB support." />
-<meta property="og:image" content="http://stemtera.com/images/banner.jpg" />
+<meta property="og:title" content="{{ page.title }}" />
+<meta property="og:description" content="{{ page.description }}" />
+<meta property="og:image" content="http://learn.stemtera.com/img/banner.jpg" />
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@stemtera">
-<meta name="twitter:title" content="STEMTera Breadboard">
-<meta name="twitter:description" content="The world's first Arduino compatible built-in breadboard with Arduino shields, LEGO® bricks and native USB support.">
+<meta name="twitter:title" content="{{ page.title }}">
+<meta name="twitter:description" content="{{ page.description }}">
 <meta name="twitter:creator" content="@stemtera">
-<meta name="twitter:image" content="http://stemtera.com/images/banner.jpg">
-<meta name="twitter:domain" content="stemtera.com"> 
-<meta name="keywords" content="{{ site.keywords }}">
-<meta name="description" content="{{ site.description }}">
+<meta name="twitter:image" content="http://learn.stemtera.com/img/banner.jpg">
+<meta name="twitter:domain" content="stemtera.com">
+<meta name="description" content="{{ page.description }}">
 <title>{{ page.title }}</title>
