--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,17 +11,17 @@
 <link rel="manifest" href="/manifest.json">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="theme-color" content="#ffffff">
-<meta property="og:url" content="http://learn.stemtera.com" />
+<meta property="og:url" content="{{ page.url }}" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="{{ page.title }}" />
 <meta property="og:description" content="{{ page.description }}" />
 <meta property="og:image" content="http://learn.stemtera.com/img/banner.jpg" />
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@stemtera">
+<meta name="twitter:site" content="@{{ site.twitter_username }}">
 <meta name="twitter:title" content="{{ page.title }}">
 <meta name="twitter:description" content="{{ page.description }}">
-<meta name="twitter:creator" content="@stemtera">
+<meta name="twitter:creator" content="@{{ page.twitter_username }}">
 <meta name="twitter:image" content="http://learn.stemtera.com/img/banner.jpg">
-<meta name="twitter:domain" content="stemtera.com">
+<meta name="twitter:domain" content="{{ site.domain }}">
 <meta name="description" content="{{ page.description }}">
 <title>{{ page.title }}</title>
