--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,23 +5,25 @@
 <link rel="stylesheet" href="/css/main.css" />
 <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie8.css" /><![endif]-->
 <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie9.css" /><![endif]-->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="/manifest.json">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/icon/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="/img/icon/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/img/icon/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/img/icon/manifest.json">
+<link rel="mask-icon" href="/img/icon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/img/icon/favicon.ico">
+<meta name="msapplication-config" content="/img/icon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
-<meta property="og:url" content="{{ page.url }}" />
+<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="{{ page.title }}" />
 <meta property="og:description" content="{{ page.description }}" />
-<meta property="og:image" content="http://learn.stemtera.com/img/banner.jpg" />
+<meta property="og:image" content="{{ site.url }}{{ site.img_path }}/{{ page.category }}/{{ page.cover_image }}" />
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@{{ site.twitter_username }}">
 <meta name="twitter:title" content="{{ page.title }}">
 <meta name="twitter:description" content="{{ page.description }}">
 <meta name="twitter:creator" content="@{{ page.twitter_username }}">
-<meta name="twitter:image" content="http://learn.stemtera.com/img/banner.jpg">
+<meta name="twitter:image" content="{{ site.url }}{{ site.img_path }}/{{ page.category }}/{{ page.cover_image }}">
 <meta name="twitter:domain" content="{{ site.domain }}">
 <meta name="description" content="{{ page.description }}">
 <title>{{ page.title }}</title>
