--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
 <meta property="og:title" content="{{ page.title }}" />
 <meta property="og:description" content="{{ page.description }}" />
 <meta property="og:image" content="{{ site.url }}{{ site.img_path }}/{{ page.category }}/{{ page.cover_image }}" />
+<meta property="fb:app_id" content="{{ site.facebook_app_id }}"/>
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@{{ site.twitter_username }}">
 <meta name="twitter:title" content="{{ page.title }}">
