--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -81,8 +81,10 @@
         {% capture foottext %} {% include footer.md %} {% endcapture %}
         {{ foottext | markdownify }}
     </div> 
-{% include google_analytics.html %}
-{% include facebook_analytics.html %}
+{% if jekyll.environment == 'production' %}
+    {% include google_analytics.html %}
+    {% include facebook_analytics.html %}
+{% endif %}
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="/js/main.js"></script>
 </body>
