--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -33,6 +33,8 @@
     <div id="page3" class="toc">
     <div class="toc-title">
     <h1>Contents</h1>
+    {% capture toctext %} {% include toc.md %} {% endcapture %}
+    {{ toctext | markdownify | replace: site.stmb_key, site.stmb }}
     </div>
     <div class="toc-content">
     <ul>
@@ -45,7 +47,7 @@
             <ul>
         {% endif %}
         {% for contents in page.contents %}
-            <a href="#page{{ pagenumber | plus: 3 }}"><li>{{ contents | replace: site.stmb_key , site.stmb }}</li></a>
+        <li><a href="#page{{ pagenumber | plus: 3 }}">{{ contents | replace: site.stmb_key , site.stmb }}</a></li>
         {% endfor %}
         {% if page.chapter =="" %}
             </ul>
@@ -71,11 +73,11 @@
     {% endif %}
     {% endfor %}
 
-    <!-- Footer --> 
+    <!-- Footer -->  
     <div id="footer" class="footer">
         {% capture foottext %} {% include footer.md %} {% endcapture %}
         {{ foottext | markdownify }}
-    </div> 
+    </div>  
 {% if jekyll.environment == 'production' %}
     {% include google_analytics.html %}
     {% include facebook_analytics.html %}
