--- a/css/main.css
+++ b/css/main.css
@@ -307,3 +307,69 @@ li:before {
     color: #f86d22; 
     margin-right: 1em;
 }
+
+.info, .success, .warning, .error, .browser {
+    padding:10px;
+    margin:10px 0;
+}
+.info:before, .success:before, .warning:before, .error:before, .browser:before {
+    font-family:FontAwesome;
+    font-style:normal;
+    font-weight:400;
+    speak:none;
+    display:inline-block;
+    text-decoration:inherit;
+    width:1em;
+    margin-right:.8em;
+    text-align:center;
+    font-variant:normal;
+    text-transform:none;
+    line-height: 4vh;
+    height: 4vh;
+    margin-left:.2em;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale
+}
+
+.info:before {
+    content:"\f05a";
+}
+.success:before {
+    content:'\f00c';
+}
+.warning:before {
+    content:'\f071';
+}
+.error:before {
+    content:'\f057';
+}
+.browser:before {
+    content:'\f0ac';
+}
+.info {
+    color: #00529B;
+    background-color: #BDE5F8;
+}
+.success {
+    color: #4F8A10;
+    background-color: #DFF2BF;
+}
+.warning {
+    color: #9F6000;
+    background-color: #FEEFB3;
+}
+.error {
+    color: #D8000C;
+    background-color: #FFBABA;
+}
+.browser {
+    background-color: #e5e5e5;
+    border-radius: 0.3vh;
+}
+.browser a:hover, .browser a:visited, .browser a:link, .browser a:active
+{
+    text-decoration: none;
+    color: inherit;
+}
+
+
