--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,14 +17,14 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="{{ page.title | replace: site.stmb_key , site.stmb }}" />
 <meta property="og:description" content="{{ page.description | replace: site.stmb_key , site.stmb }}" />
-<meta property="og:image" content="{{ site.url }}{{ site.img_path }}/{{ page.category }}/{{ page.cover_image }}" />
+<meta property="og:image" content="{{ site.url }}/{{ page.lang }}/{{ page.category }}/img/{{ page.cover_image }}" />
 <meta property="fb:app_id" content="{{ site.facebook_app_id }}"/>
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@{{ site.twitter_username }}">
 <meta name="twitter:title" content="{{ page.title | replace: site.stmb_key , site.stmb }}">
 <meta name="twitter:description" content="{{ page.description | replace: site.stmb_key , site.stmb }}">
 <meta name="twitter:creator" content="@{{ page.twitter_username }}">
-<meta name="twitter:image" content="{{ site.url }}{{ site.img_path }}/{{ page.category }}/{{ page.cover_image }}">
+<meta name="twitter:image" content="{{ site.url }}/{{ page.lang }}/{{ page.category }}/img/{{ page.cover_image }}">
 <meta name="twitter:domain" content="{{ site.domain }}">
 <meta name="description" content="{{ page.description | replace: site.stmb_key , site.stmb }}">
 <title>{{ page.title | replace: site.stmb_key , site.stmb }}</title>
