--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 <link rel="icon" type="image/png" href="/img/icon/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="/img/icon/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="/img/icon/manifest.json">
-<link rel="mask-icon" href="/img/icon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="mask-icon" href="/img/icon/safari-pinned-tab.svg">
 <link rel="shortcut icon" href="/img/icon/favicon.ico">
 <meta name="msapplication-config" content="/img/icon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
