--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -96,5 +96,13 @@
 {% endif %}
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="/js/main.js"></script>
+<script>
+function openNav() {
+    alert("hello");
+}
+
+function closeNav() {
+}
+</script>
 </body>
 </html>
