--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,7 @@ img.full-h {
 }
 
 img.three-quarter-h-h {
-    height: 80vh;
+    height: 76vh;
 }
 
 img.three-quarter-h {
@@ -134,6 +134,11 @@ img.sixteenth-h {
 img.textimg {
     height: 2.8vh;
     margin-bottom: -0.9vh;
+}
+
+.common-parts {
+    border: 5px solid #aaa;
+    width: 20vw;
 }
 
 div {
@@ -229,7 +234,7 @@ div.two-col-two-third-page {
 .preface {
     text-align: center;
     font-size: 0.8vw;
-    margin-top: 68vh;
+    margin-top: 60vh;
     margin-right: auto;
     margin-left: auto;
     width: 35vw;
