--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,16 @@ img.textimg {
     width: 20vw;
 }
 
+img.schematic {
+    width: 22vw;
+    max-height: 30vh;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 0.2vw;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
 div {
     /* border: 1px solid #f00; */
 	height: 95vh;
@@ -210,6 +220,48 @@ div.two-col-two-third-page {
     -moz-column-count: 1; /* Firefox */
     column-count: 1;
 	height: 66vh;
+}
+
+div.part-title {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 1vw;
+    float:left;
+}
+
+div.part-title img {
+    margin: 0;
+    width: 1.2vw;
+    max-height: 10vh;
+}
+
+div.parts-container {
+    background-color: #eee;
+    max-height: 11vh; 
+}
+
+div.part {
+    border: 2px solid #aaa;
+    margin: 0vw;
+    float:left;
+    max-height: 10.5vh;
+}
+
+div.part img {
+    margin-top: 0.2vw;
+    width: 5.7vw;
+    max-height: 10vh;
+}
+
+div.partdesc {
+    text-align: right;
+    max-height: 1.5vw;
+}
+
+.qty {
+    margin-left: -1.5vw;
+    margin-right: 0.5vw;
 }
 
 .toc-title {
@@ -270,7 +322,7 @@ div.two-col-two-third-page {
         z-index: 1;
         display: block;
         text-align: center;
-        font-size: 2vw;
+        font-size: 2vmin;
         margin-top: -1.5vh;
     }
     .footer { 
