added exercise 1 schematic and breadboard

--- a/css/main.css
+++ b/css/main.css
@@ -164,6 +164,10 @@ img.schematic {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+img.breadboard {
+    width: 42vw;
+    max-height: 80vh;
+}
 
 div {
     /* border: 1px solid #f00; */
