added code highlight

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
 <!--[if lte IE 8]><script src="js/ie/html5shiv.js"></script><![endif]-->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/main.css" />
+<link rel="stylesheet" href="/css/friendly.css" />
 <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie8.css" /><![endif]-->
 <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie9.css" /><![endif]-->
 <link rel="apple-touch-icon" sizes="180x180" href="/img/icon/apple-touch-icon.png">
