--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -93,14 +93,6 @@
     {% include google_analytics.html %}
 {% endif %}
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script src="/js/main.js"></script>
-<script>
-function openNav() {
-    alert("hello");
-}
-
-function closeNav() {
-}
-</script>
+<!-- <script src="/js/main.js"></script> -->
 </body>
 </html>
