--- a/css/friendly.css
+++ b/css/friendly.css
@@ -2,7 +2,7 @@
     display: inline-block;
     width: 100%;
     background-color: #fdfdfd;
-    font-size: 0.8vw;
+    font-size: 1.1em;
     margin:0;
     padding-left: 10px;
     border: 3px solid #dddddd;
