added image tag

--- a/_includes/breadboard.html
+++ b/_includes/breadboard.html
@@ -3,7 +3,7 @@
         <img src="/img/parts/breadboard_title.svg">
     </div>
     <div class="breadboard">
-        <img class="breadboard" src="img/{{ page.breadboard }}">
+        <img class="breadboard" src="img/{{ page.breadboard }}"  alt="(STMB) - {{ page.title }} Inkscape Breadboard Diagram">
     </div>
 </div>
 
