--- a/_includes/schematic.html
+++ b/_includes/schematic.html
@@ -3,7 +3,7 @@
 <img src="/img/parts/schematic_title.svg">
 </div>
 <div class="schematic">
-<img class="schematic" src="img/{{ page.schematic }}">
+<img class="schematic" src="img/{{ page.schematic }}" alt="(STMB) - {{ page.title }} Schematic Diagram">
 </div>
 </div>
 
